--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,18 @@
     <artifactId>priority-queue</artifactId>
     <version>1.0-SNAPSHOT</version>
     <dependencies>
+        <!-- JUnit -->
         <dependency>
-            <groupId>org.testng</groupId>
-            <artifactId>testng</artifactId>
-            <version>6.8</version>
-            <scope>test</scope>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+        </dependency>
+
+        <!-- Concurrent JUnit -->
+        <dependency>
+            <groupId>com.vmlens</groupId>
+            <artifactId>concurrent-junit</artifactId>
+            <version>1.0.0</version>
         </dependency>
     </dependencies>
 
